[project]
name = "weblite_framework"
version = "0.1.0"
description = ""
authors = [
    {name = "Чернов Михаил",email = "mihail.tchernov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
isort = "6.0.1"
flake8 = "7.3.0"
flake8-quotes = "3.4.0"
flake8-annotations = "3.1.1"
flake8-docstrings = "1.7.0"
flake8-dunder-all = "0.5.0"
black = "25.1.0"
mypy = "1.17.1"


[tool.poetry.group.test.dependencies]
pytest = "8.4.1"
pyhamcrest = "2.1.0"
